log
Thu 14 Mar 2024 08:46:23 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
Thu 14 Mar 2024 08:47:55 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:38:11: error: expected ‘;’ before ‘}’ token
   38 |     size--
      |           ^
      |           ;
   39 |   }
      |   ~        
Compilation failed
5853533
